# pyzenodo3

./: .appveyor.yml  .gitignore  .mypy.ini  .travis.yml  CITATION  README.md  main.py  meta.ini  mypy.ini  search_zenodo.py  setup.cfg  setup.py  upload_zenodo.py
.github/workflows/: ci.yml
archive/: .appveyor.yml  .travis.yml
pyzenodo3/: __init__.py  base.py  upload.py
src/pyzenodo3/: __init__.py  base.py  upload.py  utils.py
src/pyzenodo3/tests/: meta.ini  test_all.py
tests/: test_all.py
