[metadata]
name = pyzenodo3
version = 1.1.0
author = Michael Hirsch; Tom Klaver
author_email = scivision@users.noreply.github.com
description = Pure Python 3 wrapper for the Zenodo REST API
url = https://github.com/space-physics/pyzenodo3
keywords =
  zenodo
  open data
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Scientific/Engineering
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
install_requires =
  requests
  Beautifulsoup4
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
